--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -13,6 +13,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>hardware_interface</build_depend>
+
   <export>
     <cpp cflags="-I${prefix}/include"/>
     <rosdoc config="rosdoc.yaml"/>
