--- a/joint_limits_interface/test/joint_limits_rosparam.yaml
+++ b/joint_limits_interface/test/joint_limits_rosparam.yaml
@@ -12,6 +12,28 @@ joint_limits:
     has_effort_limits: true
     max_effort: 20.0
 
+  yinfoo_joint:
+    has_position_limits: true
+    has_velocity_limits: true
+    has_acceleration_limits: true
+    has_jerk_limits: true
+    has_effort_limits: true
+
+  yangfoo_joint:
+    min_position: 0.0
+    max_position: 1.0
+    max_velocity: 2.0
+    max_acceleration: 5.0
+    max_jerk: 100.0
+    max_effort: 20.0
+
+  antifoo_joint:
+    has_position_limits: false
+    has_velocity_limits: false
+    has_acceleration_limits: false
+    has_jerk_limits: false
+    has_effort_limits: false
+
   bar_joint:
     has_velocity_limits: true
     max_velocity: 2.0
@@ -20,8 +42,6 @@ joint_limits:
     has_position_limits: true
     # Missing min_position
     max_position: 1.0
-    has_velocity_limits: true
-    # Missing max_velocity
-    # Missing has_max_acceleration
-    max_acceleration: 5.0
+
+
 
