--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -5,8 +5,9 @@
   <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
   <license>BSD</license>
 
-  <url type="website">https://github.com/willowgarage/ros_control/wiki</url>
-  <!-- <url type="bugtracker"></url> -->
+  <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
+  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
+  <url type="repository">https://github.com/ros-controls/ros_control</url>
   <author>Adolfo Rodriguez Tsouroukdissian</author>
 
   <buildtool_depend>catkin</buildtool_depend>
