--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -7,7 +7,8 @@
   <license>Modified BSD</license>
 
   <url type="website">https://github.com/ros-controls/ros_control/wiki</url>
-  <!-- <url type="bugtracker"></url> -->
+  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
+  <url type="repository">https://github.com/ros-controls/ros_control</url>
 
   <author>Adolfo Rodriguez Tsouroukdissian</author>
 
