--- a/hardware_interface/package.xml
+++ b/hardware_interface/package.xml
@@ -1,7 +1,7 @@
 <package>
   <name>hardware_interface</name>
   <version>0.5.0</version>
-  <description>Hardware Interaface base class.</description>
+  <description>Hardware Interface base class.</description>
   <maintainer email="wim@hidof.com">Wim Meeussen</maintainer>
 
   <license>BSD</license>
