--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -32,14 +32,17 @@ else()
     hardware_interface
   )
 
-  find_library(TINYXML tinyxml)
+  # Include a custom cmake file for TinyXML
+  set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+  include(SearchForTinyXML)
+  include_directories(${tinyxml_include_dirs})
+  link_directories(${tinyxml_library_dirs})
+  add_definitions(${tinyxml_cflags})
 
   # Build
   include_directories(
     include
     ${catkin_INCLUDE_DIRS}
-    ${tinyxml_INCLUDE_DIRS}
-    ${TINYXML}
   )
   link_directories(${catkin_LIBRARY_DIRS})
 
@@ -47,17 +50,14 @@ else()
   add_library(${PROJECT_NAME}_parser
     src/transmission_parser.cpp
   )
-  target_link_libraries(${PROJECT_NAME}_parser ${catkin_LIBRARIES} ${tinyxml_LIBRARIES} ${TINYXML})
+  target_link_libraries(${PROJECT_NAME}_parser ${catkin_LIBRARIES} ${tinyxml_libraries})
 
   # Declare a catkin package
   catkin_package(
-    DEPENDS tinyxml
     LIBRARIES 
       ${PROJECT_NAME}_parser
     INCLUDE_DIRS 
       include
-      ${tinyxml_INCLUDE_DIRS}
-      ${TINYXML}
   )
 
   # Tests
@@ -65,7 +65,7 @@ else()
   catkin_add_gtest(differential_transmission_test     test/differential_transmission_test.cpp)
   catkin_add_gtest(four_bar_linkage_transmission_test test/four_bar_linkage_transmission_test.cpp)
   catkin_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
-  target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${tinyxml_LIBRARIES})
+  target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${tinyxml_libraries})
 
   # Install
   install(DIRECTORY include/${PROJECT_NAME}/
