--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -35,7 +35,7 @@ else()
   # Include a custom cmake file for TinyXML
   set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
   include(SearchForTinyXML)
-  include_directories(${tinyxml_include_dirs})
+  include_directories(${tinyxml_INCLUDE_DIRS})
   link_directories(${tinyxml_library_dirs})
   add_definitions(${tinyxml_cflags})
 
@@ -50,7 +50,7 @@ else()
   add_library(${PROJECT_NAME}_parser
     src/transmission_parser.cpp
   )
-  target_link_libraries(${PROJECT_NAME}_parser ${catkin_LIBRARIES} ${tinyxml_libraries})
+  target_link_libraries(${PROJECT_NAME}_parser ${catkin_LIBRARIES} ${tinyxml_LIBRARIES})
 
   # Declare a catkin package
   catkin_package(
@@ -65,7 +65,7 @@ else()
   catkin_add_gtest(differential_transmission_test     test/differential_transmission_test.cpp)
   catkin_add_gtest(four_bar_linkage_transmission_test test/four_bar_linkage_transmission_test.cpp)
   catkin_add_gtest(transmission_interface_test        test/transmission_interface_test.cpp)
-  target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${tinyxml_libraries})
+  target_link_libraries(transmission_interface_test ${catkin_LIBRARIES} ${tinyxml_LIBRARIES})
 
   # Install
   install(DIRECTORY include/${PROJECT_NAME}/
