--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -18,6 +18,7 @@
 
   <build_depend>hardware_interface</build_depend>
   <build_depend>tinyxml</build_depend>
+  <build_depend>cmake_modules</build_depend>
 
   <run_depend>tinyxml</run_depend>
 
