--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -19,11 +19,16 @@
   <build_depend>hardware_interface</build_depend>
   <build_depend>tinyxml</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>resource_retriever</build_depend> <!-- Test-only-->
 
   <run_depend>tinyxml</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>resource_retriever</run_depend> <!-- Test-only-->
 
   <export>
     <cpp cflags="-I${prefix}/include"/>
     <rosdoc config="rosdoc.yaml"/>
+    <transmission_interface plugin="${prefix}/ros_control_plugins.xml" />
   </export>
 </package>
