--- a/transmission_interface/CMakeLists.txt
+++ b/transmission_interface/CMakeLists.txt
@@ -14,11 +14,19 @@ if(USE_ROSBUILD)
   rosbuild_add_library(${PROJECT_NAME}_parser src/transmission_parser.cpp)
 
   rosbuild_add_library(transmission_interface_loader
-    src/transmission_loader.cpp                  include/transmission_interface/transmission_loader.h
+    src/transmission_loader.cpp           include/transmission_interface/transmission_loader.h
+    src/transmission_interface_loader.cpp include/transmission_interface/transmission_interface_loader.h)
+  target_link_libraries(transmission_interface_loader  ${PROJECT_NAME}_parser)
+
+  rosbuild_add_library(transmission_interface_loader_plugins
     src/simple_transmission_loader.cpp           include/transmission_interface/simple_transmission_loader.h
     src/differential_transmission_loader.cpp     include/transmission_interface/differential_transmission_loader.h
     src/four_bar_linkage_transmission_loader.cpp include/transmission_interface/four_bar_linkage_transmission_loader.h
-    src/transmission_interface_loader.cpp        include/transmission_interface/transmission_interface_loader.h)
+    src/joint_state_interface_provider.cpp       include/transmission_interface/joint_state_interface_provider.h
+    src/position_joint_interface_provider.cpp    include/transmission_interface/position_joint_interface_provider.h
+    src/velocity_joint_interface_provider.cpp    include/transmission_interface/velocity_joint_interface_provider.h
+    src/effort_joint_interface_provider.cpp      include/transmission_interface/effort_joint_interface_provider.h)
+  target_link_libraries(transmission_interface_loader_plugins transmission_interface_loader)
 
   rosbuild_add_gtest(simple_transmission_test                  test/simple_transmission_test.cpp)
   rosbuild_add_gtest(differential_transmission_test            test/differential_transmission_test.cpp)
@@ -34,8 +42,7 @@ if(USE_ROSBUILD)
   target_link_libraries(simple_transmission_loader_test           ${PROJECT_NAME}_parser)
   target_link_libraries(differential_transmission_loader_test     ${PROJECT_NAME}_parser)
   target_link_libraries(four_bar_linkage_transmission_loader_test ${PROJECT_NAME}_parser)
-  target_link_libraries(transmission_interface_loader_test        ${PROJECT_NAME}_parser
-                                                                  transmission_interface_loader)
+  target_link_libraries(transmission_interface_loader_test        transmission_interface_loader)
 
   # TODO: why is it explicitly needed???, without it linker fails.
   target_link_libraries(simple_transmission_test           pthread)
