--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,13 @@ before_install: # Use this to prepare the system to install prerequisites or dep
   - rosdep update
 install: # Use this to install any prerequisites or dependencies necessary to run your build
   # Create workspace
-  - mkdir -p ~/ros/ws_catkin/src
+  - mkdir -p ~/ros/ws_ros_controls/src
   - cd ~/ros/ws_ros_controls/src
   - wstool init .
   # Download non-debian stuff
   - wstool merge https://raw.github.com/ros-controls/ros_control/hydro-devel/ros_control.rosinstall
   - wstool update
-  # Delete the moveit.rosinstall version of this repo and use the one of the branch we are testing
+  # Delete the ros_control.rosinstall version of this repo and use the one of the branch we are testing
   - rm -rf $REPOSITORY_NAME
   - ln -s $CI_SOURCE_PATH . # Link the repo we are testing to the new workspace
   - cd ../
